# design-notes

./: .gitignore  README.md  mkdocs.yml  requirements.txt
.github/workflows/: deploy.yml
docs/: accross_flats.md  beam_deflection.md  bolt_head_sizes.md  broaching.md  dowel_pins.md  general_tolernace.md  index.md  licence.md  non-standard-threads.md  orings.md  threads.md
docs/Drafting/: drawing_checking.md  general_tolernace.md  surface_finish.md  text_codes.md  useful_notes.md
docs/Mechanical Design/: accross_flats.md  beam_deflection.md  bolt_head_sizes.md  broaching.md  material_densities.md  non-standard-threads.md  orings.md  threads.md
docs/Programming/: python_reference_files.md  style_guide.md
docs/Python/: style_guide.md
docs/assets/documents/: pyproject.toml  python_style_guide.md  python_style_guide.txt
docs/dfm/: index.md
docs/electronics/: index.md
docs/fits-and-tolerances/: index.md
docs/gdt/: index.md
docs/heat-transfer/: index.md
docs/javascripts/: dotfile_downloads.js
docs/materials/: index.md
docs/metrology/: index.md
docs/stylesheets/: blockquotes.css  codeblocks.css  extra.css  fonts.css  images.css  tables.css  theme.css
docs/threads/: index.md  metric.md
hooks/: nav_order.py  table_classes.py
tools/: prepare_line_art.py
