[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "example-package"
description = "Short package description"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Your Name", email = "you@example.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "flake8",
  "pytest",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/example_package"]
